Tue Sep 14 11:58:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Dynamic_Service.h:
          Doxygen improvement

Tue Sep 14 10:21:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added support for the Intel 8.1 C++ Compiler

Tue Sep 14 07:01:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_order.lst:
          Added TAO/orbsvcs/orbsvcs/CosNaming_Skel to the list of projects
          to build first.

Mon Sep 13 19:09:23 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* configure.ac:
	* m4/config_h.m4:

	  Changed to use ACE_CHECK_HAS_FUNC([scandir]) and get rid of
	  explicit definition, autoconf template macro, etc.

Mon Sep 13 20:33:25 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

  	* ace/Select_Reactor_Base.cpp: Changed the
	  ACE_Select_Reactor_Handler_Repository::open() method so that it
 	  uses the generalized ACE::set_handle_limit() method to not lower
 	  the handles, which caused problems for applications that want to
 	  use small reactor sizes but not limit the number of handles in
 	  the process.  Thanks to Eider Oliveira <eider at oliveira dot
 	  gmail at com> for suggesting this.

	* ace/ACE.cpp,
	  ace/ACE.h: Generalized ACE::set_handle_limit() so
	  it can be told not to lower the handle limit.

Mon Sep 13 18:15:44 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* ACE_wrappers/m4/platform.m4:

	  Added new ACE_FUNC_IOCTL_ARGTYPES macro, used to set
	  ACE_IOCTL_TYPE_ARG2.

	* ACE_wrappers/ace/config-netbsd.h:

	  Added ACE_IOCTL_TYPE_ARG2 definition.

	* ACE_wrappers/ace/OS_NS_stropts.h:
	* ACE_wrappers/ace/OS_NS_stropts.inl:

	  Added feature test macro ACE_IOCTL_TYPE_ARG2 (which defaults to
	  int) so that ACE_OS::ioctl uses the same type as ::ioctl.  This
	  help avoid sign extension problems on 64 bit platforms that use
	  unsigned long.

Mon Sep 13 15:52:04 2004  Dale Wilson  <wilson_d@ociweb.com>
