@@ -1904,6 +1904,7 @@ Rick Robinson <rick at oyarsa dot com>
 John D. Robertson <john at rrci dot com>
 Paul Lew <paullew at cisco dot com>
 Eider Oliveira <eider at oliveira dot gmail at com>
+Jeff Jones <jjones at zonetrading dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
